prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/global_consts_only.nut
// EXPECT_ERROR: "global can be applied to const and enum only"
global local x = 5
